pagina de tributo

--- a/Form-survey/index.html
+++ b/Form-survey/index.html
@@ -82,6 +82,8 @@
             <input id="submit" type="submit"  class="form">
           </div>
         </form>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.0000000000005!2d-77.03687068519159!3d38.90719230471481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b7b6d4d8e7c5%3A0xc252452f8c8a4c6e!2sWhite%20House%20Visitor%20Center!5e0!3m2!1sen!2sus!4v1629200108809!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 
 </body>
