--- a/css flexbox photo galery/index.html
+++ b/css flexbox photo galery/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <h1>css flexbox photo gallery</h1>
+      <h1>Galeria de imagem usando flexbox por ciro dornelles</h1>
     </header>
     <div class="gallery">
       <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="aaaaaaaaa">
